[project]
name = "com.piphi.await_element"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KelvinSan", email = "kelvin.sanyaolu@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.116.1", "aiofiles>=24.1.0", "zeroconf>=0.147.2", "pyinstaller>=6.16.0", "netifaces>=0.11.0", "supervisor-win>=4.7.0; sys_platform == 'win32'", "tenacity>=9.1.4", "piphi-runtime-kit-python @ file:///${PROJECT_ROOT}/../piphi-runtime-kit-python"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "piphi-runtime-testkit-python @ file:///${PROJECT_ROOT}/../piphi-runtime-testkit-python",
]
